# consoletest

./: .coveragerc  LICENSE  entry_points.txt  setup.cfg
.github/workflows/: testing.yml
consoletest/: builder.py  commands.py  consoletest.py  parser.py  run_commands.py  util.py
tests/: test_consoletest.py
